# LLM-Sketch

./: README.md  environment.yml
data/: README.md
data/pcap_processor/: CMakeLists.txt  run.sh
data/pcap_processor/src/: main.cpp
model/: README.md  packet_dataset.py  packet_tokenizer.py  test.py  train.py
sketch/: README.md  benchmark.py  cm_sketch.py  coco_sketch.py  heavy_part.py  hhh_bench.py  llm_sketch.py  llm_sketch_hhh.py  run_flow_size.py  run_heavy_hitter.py  run_hhh.py  utils.py
